# stdlib-sniper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  snippet_suggestion.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: LICENSE  WANTED_SNIPPETS.md  index.md
docs/files/: append_file.md  change_directory.md  copy_directory.md  copy_file.md  create_directory.md  create_nested_directories.md  create_temp_file.md  delete_directory.md  delete_directory_recursive.md  delete_file.md  directory_exists.md  file_checksum.md  file_exists.md  get_current_directory.md  get_file_modified_time.md  get_file_size.md  list_directory.md  list_directory_recursive.md  move_file.md  read_binary_file.md  read_file.md  read_file_lines.md  write_binary_file.md  write_file.md  write_lines.md
docs/javascripts/: extra.js
docs/math/: bit_operations.md  calculus.md  clamp_number.md  complex_math.md  decimal_precision.md  exponents.md  factorial.md  fibonacci.md  format_number.md  fraction_math.md  gcd_lcm.md  is_even_odd.md  is_prime.md  linear_algebra.md  logarithms.md  matrices.md  number_conversion.md  percentage.md  random_number.md  roots.md  round_number.md  statistics_advanced.md  (+3 more)
scripts/: analyze_coverage.py  check_broken_links.py  check_duplicate_snippets.py  export_snippets_to_py.py  generate_docs.py  lint_all_py_files.py  lint_md_snippets.py  run_all_checks.py  setup_dev.py  update_indexes.py  validate_files.py
snippets/: CATEGORY_SUMMARY.md  INDEX.md  TAG_SUMMARY.md
(+429 files in other folders)
