[project]
name = "stdlib-sniper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.12.2",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "tomli>=2.2.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90"]
ignore = [
    "E501",
    "C901",
    "E402",
    "F811",
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"snippets_py/*.py" = ["E501", "F401", "F841", "E402", "F811", "I001"]
"scripts/*.py" = ["C901", "E501"]
